JENA-2131: Preserve legacy behaviour (QueryExecution modification)