@@ -23,7 +23,6 @@ import static org.apache.jena.fuseki.ServerCtl.ServerScope.SUITE;
 import static org.apache.jena.fuseki.ServerCtl.ServerScope.TEST;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.apache.jena.atlas.lib.FileOps;
@@ -202,11 +201,11 @@ public class ServerCtl {
 
     protected static void setupServer(boolean updateable) {
         // Does not initial Fuseki webapp.
-        FusekiEnv.FUSEKI_HOME = Paths.get(TS_FusekiWebapp.FusekiTestHome).toAbsolutePath();
+        FusekiEnv.FUSEKI_HOME = Path.of(TS_FusekiWebapp.FusekiTestHome).toAbsolutePath();
         FileOps.ensureDir("target");
         FileOps.ensureDir(TS_FusekiWebapp.FusekiTestHome);
         FileOps.ensureDir(TS_FusekiWebapp.FusekiTestBase);
-        FusekiEnv.FUSEKI_BASE = Paths.get(TS_FusekiWebapp.FusekiTestBase).toAbsolutePath();
+        FusekiEnv.FUSEKI_BASE = Path.of(TS_FusekiWebapp.FusekiTestBase).toAbsolutePath();
         // Must have shiro.ini.
         // This fakes the state after FusekiSystem initialization
         // in the case of starting in the same location. FusekiSystem has statics.
